--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ commonmark==0.9.1
 DateTime==4.7
 decorator==5.1.1
 entrypoints==0.4
+fsspec==2022.11.0
 gitdb==4.0.10
 GitPython==3.1.29
 idna==3.4
